fixed text overflow in sidenav boxes

--- a/web/META-INF/resources/css/index.css
+++ b/web/META-INF/resources/css/index.css
@@ -271,7 +271,10 @@ a {
 }
 
 .sidenav a {
-    padding: 8px 8px 8px 32px;
+    padding: 8px 8px 8px 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     text-decoration: none;
     font-size: 1.5em;
     color: #2980b9;
